styles: ensure a responsive presentation component on small screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 :root {
 
   --primary-color: #034a60;
-  --second-color: #013241;
+  --second-color: #0096D6;
   --three-color: #162D59;
 
 }
